@@ -12,152 +12,70 @@
  */
 package org.sonatype.nexus.pax.logging;
 
-import ch.qos.logback.access.pattern.AccessConverter;
-import ch.qos.logback.access.spi.IAccessEvent;
+import ch.qos.logback.classic.pattern.ClassicConverter;
+import ch.qos.logback.classic.spi.ILoggingEvent;
+
+import java.lang.invoke.MethodHandle;
+import java.lang.invoke.MethodHandles;
+import java.lang.invoke.MethodType;
 
 /**
- * Base abstract class for Logback converters that need to be Virtual Thread aware.
- * Provides utility methods to detect virtual threads, extract thread IDs, and format
- * thread information appropriately based on thread type.
+ * Converter that is aware of Java 21 Virtual Threads and provides appropriate
+ * thread type information in logs. For platform threads, it behaves like the
+ * standard thread converter. For virtual threads, it adds a "virtual-" prefix.
  *
- * @since 3.60
+ * @since 3.60.0
  */
-public abstract class VirtualThreadAwareConverter
-    extends AccessConverter
+public class VirtualThreadAwareConverter
+    extends ClassicConverter
 {
-  /**
-   * Determines if the current thread is a virtual thread.
-   * Uses Java 21's Thread.isVirtual() method.
-   *
-   * @return true if the current thread is a virtual thread, false otherwise
-   */
-  protected boolean isVirtualThread() {
-    return Thread.currentThread().isVirtual();
+  private static final String VIRTUAL_PREFIX = "virtual-";
+  private static final String UNKNOWN = "unknown";
+  
+  // Use reflection to check for virtual threads to maintain compatibility with Java 11
+  private static final MethodHandle IS_VIRTUAL_METHOD;
+  
+  static {
+    MethodHandle isVirtualMethod = null;
+    try {
+      // Try to get the isVirtual method from Thread class (Java 21+)
+      MethodHandles.Lookup lookup = MethodHandles.lookup();
+      isVirtualMethod = lookup.findVirtual(Thread.class, "isVirtual", MethodType.methodType(boolean.class));
+    }
+    catch (NoSuchMethodException | IllegalAccessException e) {
+      // Method doesn't exist in current Java version, which is fine
+    }
+    IS_VIRTUAL_METHOD = isVirtualMethod;
   }
-
+  
   /**
-   * Determines if the specified thread is a virtual thread.
-   * Uses Java 21's Thread.isVirtual() method.
+   * Checks if the given thread is a virtual thread.
    *
    * @param thread the thread to check
    * @return true if the thread is a virtual thread, false otherwise
    */
-  protected boolean isVirtualThread(Thread thread) {
-    return thread != null && thread.isVirtual();
-  }
-
-  /**
-   * Gets the ID of the current thread, handling both platform and virtual threads.
-   *
-   * @return the thread ID as a String
-   */
-  protected String getThreadId() {
-    Thread thread = Thread.currentThread();
-    return getThreadId(thread);
-  }
-
-  /**
-   * Gets the ID of the specified thread, handling both platform and virtual threads.
-   *
-   * @param thread the thread to get the ID from
-   * @return the thread ID as a String
-   */
-  protected String getThreadId(Thread thread) {
-    if (thread == null) {
-      return "?"; 
-    }
-    return String.valueOf(thread.threadId());
-  }
-
-  /**
-   * Formats thread information for logging, with different formats for virtual and platform threads.
-   *
-   * @param thread the thread to format information for
-   * @return formatted thread information string
-   */
-  protected String formatThreadInfo(Thread thread) {
-    if (thread == null) {
-      return "unknown";
+  private static boolean isVirtualThread(Thread thread) {
+    if (IS_VIRTUAL_METHOD == null) {
+      return false; // Not running on Java 21+
     }
     
-    StringBuilder sb = new StringBuilder();
-    if (isVirtualThread(thread)) {
-      sb.append("VirtualThread[#").append(getThreadId(thread));
-      if (thread.getName() != null && !thread.getName().isEmpty()) {
-        sb.append(',').append(thread.getName());
-      }
-      sb.append(']');
-      
-      // Add carrier thread info if available
-      String carrierInfo = getCarrierThreadInfo(thread);
-      if (carrierInfo != null && !carrierInfo.isEmpty()) {
-        sb.append('/').append(carrierInfo);
-      }
-    } else {
-      // Platform thread
-      sb.append("Thread[#").append(getThreadId(thread));
-      if (thread.getName() != null && !thread.getName().isEmpty()) {
-        sb.append(',').append(thread.getName());
-      }
-      sb.append(",").append(thread.getPriority());
-      sb.append(',').append(thread.getThreadGroup() != null ? thread.getThreadGroup().getName() : "?");
-      sb.append(']');
+    try {
+      return (boolean) IS_VIRTUAL_METHOD.invoke(thread);
     }
-    return sb.toString();
+    catch (Throwable e) {
+      return false; // Error invoking method, assume not virtual
+    }
   }
-
-  /**
-   * Attempts to extract carrier thread information for a virtual thread.
-   * This is implementation-specific and may not be available in all JVMs.
-   *
-   * @param thread the virtual thread to get carrier information for
-   * @return carrier thread information or null if not available
-   */
-  protected String getCarrierThreadInfo(Thread thread) {
-    if (!isVirtualThread(thread)) {
-      return null;
-    }
-    
-    // The state of the thread can indicate if it's mounted on a carrier
-    Thread.State state = thread.getState();
-    if (state == Thread.State.RUNNABLE) {
-      // For running threads, we can assume they're mounted
-      return "runnable";
-    } else if (state == Thread.State.BLOCKED) {
-      // For blocked threads, they might be pinned
-      return "blocked";
-    }
-    
-    return null;
-  }
-
-  /**
-   * Detects if a virtual thread is currently pinned to its carrier thread.
-   * Pinning occurs when a virtual thread is executing synchronized code or native methods.
-   * 
-   * Note: This is a best-effort detection and may not be accurate in all cases.
-   * For precise pinning detection, use JVM flags like -Djdk.tracePinnedThreads or JFR events.
-   *
-   * @param thread the thread to check for pinning
-   * @return true if the thread appears to be pinned, false otherwise or if not a virtual thread
-   */
-  protected boolean isPinned(Thread thread) {
-    if (!isVirtualThread(thread)) {
-      return false;
-    }
-    
-    // A virtual thread in BLOCKED state might be pinned
-    // This is a heuristic and not a definitive indicator
-    return thread.getState() == Thread.State.BLOCKED;
-  }
-
-  /**
-   * Abstract method that must be implemented by subclasses to convert an access event
-   * into a string representation.
-   *
-   * @param accessEvent the access event to convert
-   * @return the string representation of the event
-   */
+  
   @Override
-  public abstract String convert(IAccessEvent accessEvent);
+  public String convert(ILoggingEvent event) {
+    Thread currentThread = Thread.currentThread();
+    
+    if (isVirtualThread(currentThread)) {
+      return VIRTUAL_PREFIX + currentThread.getName();
+    }
+    else {
+      return currentThread.getName();
+    }
+  }
 }
